--- a/package.json
+++ b/package.json
@@ -16,11 +16,13 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "~7.0.0",
+    "@angular/cdk": "~7.0.2",
     "@angular/common": "~7.0.0",
     "@angular/compiler": "~7.0.0",
     "@angular/core": "~7.0.0",
     "@angular/forms": "~7.0.0",
     "@angular/http": "~7.0.0",
+    "@angular/material": "^7.0.2",
     "@angular/platform-browser": "~7.0.0",
     "@angular/platform-browser-dynamic": "~7.0.0",
     "@angular/platform-server": "~7.0.0",
@@ -31,6 +33,7 @@
     "@nguniversal/module-map-ngfactory-loader": "v7.0.2",
     "core-js": "^2.5.4",
     "express": "^4.15.2",
+    "hammerjs": "^2.0.8",
     "rxjs": "~6.3.3",
     "zone.js": "~0.8.26"
   },
